Update blog post

--- a/content/blog/软件周刊6.md
+++ b/content/blog/软件周刊6.md
@@ -3,6 +3,7 @@ title: 软件周刊6
 date: 2025-08-08T03:23:21.716Z
 ---
 
+
 软件周刊6
 
 #### 修改git bash的配置，如窗口初始大小等，可以平时的开发带来方便，平时可以结合git gui使用
@@ -27,6 +28,9 @@ date: 2025-08-08T03:23:21.716Z
 #### 代替cat的[bat](https://github.com/sharkdp/bat)
 
 ![image-20250808110540438](https://raw.githubusercontent.com/wuqingwei/image/main/img/image-20250808110540438.png)
+
+[github picgo 搭建个人图床，typora自动上传](https://tinymind.me/blog/github-picgo-%E6%90%AD%E5%BB%BA%E4%B8%AA%E4%BA%BA%E5%9B%BE%E5%BA%8Atypora%E8%AE%BE%E7%BD%AE%E8%87%AA%E5%8A%A8%E4%B8%8A%E4%BC%A0)
+
 项目管理工具[freecamp](https://freedcamp.com/)
 
 #### 同步另外一个机器gitkraken的用户配置
